# django-rest-fhir

./: .editorconfig  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  python-package.yml  test.yml
requirements/: requirements-codestyle.txt  requirements-install-requires.txt  requirements-testing.txt
rest_fhir/: __init__.py  apps.py  exceptions.py  generics.py  mixins.py  models.py  serializer.py  serializers.py  urls.py  views.py
rest_fhir/migrations/: 0001_create_resource_models.py
rest_fhir/mixins/: __init__.py  conditional_read.py  create.py  delete.py  read.py  update.py  vread.py
tests/: settings.py  test_models.py  utils.py
tests/test_views/: test_create.py  test_delete.py  test_read.py  test_update.py  test_vread.py
