[metadata]
name=django-rest-fhir
version=1.0.0
url=https://github.com/weynelucas/django-rest-fhir/
author=Lucas Weyne
author_email=weynelucas@gmail.com
description=A reusable implementation of the HL7 FHIR standard for healthcare interoperability in Python using Django and Django REST framework
long_description=file: README.md
long_description_content_type=text/markdown
download_url=https://github.com/weynelucas/django-rest-fhir/archive/1.0.0.tar.gz
keywords=fhir hl7 healthcare interoperability django django-rest-framework django-rest-fhir django-fhir
classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP

[options]
python_requires = >= 3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    djangorestframework >= 3.11.2

[options.packages.find]
exclude =
    tests*

[flake8]
exclude =
    env,
    build,
    dist,
    .git,
    .toml,
    .tox,
    .env,
    **/migrations/**
ignore =
    E203,
    E266,
    W503,
    W504,
    W601
per-file-ignores =
    tests/*:E501
max-line-length = 80

[isort]
combine_as_imports = true
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 80
indent = 4
atomic = true
default_section = THIRDPARTY
known_first_party = rest_fhir, tests
known_django = django
sections = FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
console_output_style = classic

[coverage:run]
omit =
    env/*,
    build/*,
    dist/*,
    tests/*
